infrastructure/base/infra-stage3/cilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium
  metadata:
    labels:
      pod-security.kubernetes.io/enforce: privileged
      pod-security.kubernetes.io/warn: privileged
