infrastructure/base/infra-stage3/cilium/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-wildcard-cert
  namespace: cert-manager
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: cilium
  to:
  - group: ""
    kind: Secret
    name: wildcard
