infrastructure/base/infra-stage3/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: cilium
  annotations:
    external-dns.kubernetes.io/target: json-patch-will-replace-this
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard
            namespace: cert-manager
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: json-patch-will-replace-this
      lbipam.cilium.io/ips: json-patch-will-replace-this
